src/objects/KS_Reporte__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para alojar reportes de visita</description>
    <fields>
        <fullName>Conectividad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boton para que les llegue el reporte a conectividad</description>
        <label>Conectividad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iluminaci_n_Indoor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Botón para que le llegue el reporte a iluminacion indoor</description>
        <label>Iluminación Indoor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iluminacion_Outdoor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Iluminación Outdoor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Asunto__c</fullName>
        <label>Asunto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Reportes</relationshipLabel>
        <relationshipName>Reportes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reportes</relationshipLabel>
        <relationshipName>Reportes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Cuenta__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reportes</relationshipLabel>
        <relationshipName>Reportes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_fin__c</fullName>
        <label>Fecha de fin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_inicio__c</fullName>
        <label>Fecha de inicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>mi</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Reportes</relationshipLabel>
        <relationshipName>Reportes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Oferta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reportes</relationshipLabel>
        <relationshipName>Reportes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Privado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_visita__c</fullName>
        <label>Tipo de visita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_visita</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_objetivo_de_la_visita__c</fullName>
        <label>Objetivo de la visita</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PUNTO_RECARGA_VE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punto Recarga VE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pequenio_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Casilla que se marcará para enviar correo a las personas de pequeño material</description>
        <label>Pequeño Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sistemas_de_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boton para que les llegue el reporte a Sistemas de Control</description>
        <label>Sistemas de Control</label>
        <type>Checkbox</type>
    </fields>
    <label>Reporte</label>
    <listViews>
        <fullName>KS_Mis_Reportes</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>KS_Fecha_de_inicio__c</columns>
        <columns>KS_Fecha_de_fin__c</columns>
        <columns>KS_Tipo_de_visita__c</columns>
        <columns>KS_Asunto__c</columns>
        <columns>KS_objetivo_de_la_visita__c</columns>
        <columns>KS_Comentarios__c</columns>
        <columns>KS_Contacto__c</columns>
        <columns>KS_Cuenta__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Privado__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017 12:00 AM</value>
        </filters>
        <label>Mis reportes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Todos_los_reportes</fullName>
        <columns>NAME</columns>
        <columns>KS_Fecha_de_inicio__c</columns>
        <columns>KS_Fecha_de_fin__c</columns>
        <columns>KS_Tipo_de_visita__c</columns>
        <columns>KS_Asunto__c</columns>
        <columns>KS_objetivo_de_la_visita__c</columns>
        <columns>KS_Comentarios__c</columns>
        <columns>KS_Contacto__c</columns>
        <columns>KS_Cuenta__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Privado__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los reportes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Nuevos_de_Este_Mes1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>KS_Fecha_de_inicio__c</columns>
        <columns>KS_Cuenta__c</columns>
        <columns>KS_Contacto__c</columns>
        <columns>KS_objetivo_de_la_visita__c</columns>
        <columns>KS_Comentarios__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Oferta__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Nuevos de Este Mes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Nuevos_de_Hoy</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>KS_Fecha_de_inicio__c</columns>
        <columns>KS_Cuenta__c</columns>
        <columns>KS_Contacto__c</columns>
        <columns>KS_Asunto__c</columns>
        <columns>KS_objetivo_de_la_visita__c</columns>
        <columns>KS_Comentarios__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Oferta__c</columns>
        <columns>KS_Campana__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Nuevos de Hoy</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Nuevos_de_este_Semana</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>KS_Fecha_de_inicio__c</columns>
        <columns>KS_Cuenta__c</columns>
        <columns>KS_Contacto__c</columns>
        <columns>KS_objetivo_de_la_visita__c</columns>
        <columns>KS_Comentarios__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Oferta__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Nuevos de este Semana</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>rv-{0000000}</displayFormat>
        <label>idPC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reportes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>